--- a/dogs.html
+++ b/dogs.html
@@ -54,85 +54,31 @@
         <!-- Images Source: Client Provided, owned and shot by Guiding Eyes at Cornell -->
         <!-- Current Dogs -->
         <h2 class="dog-heading">Current Dogs</h2>
+
         <div class="dog-row">
 
             <div>
                 <div class="container">
-                    <img src="images/dogs_tina.png"
-                        alt="Tina - on hover, more details can be seen; (SP23 - Present), Raised by: Dana Matusewicz, Male Yellow Labrador">
-                    <p>Tina (1TT22)</p>
+                    <img src="images/dogs_melon.jpeg"
+                        alt="Melon - on hover, more details can be seen; (SP24 - Present), Raised by: Casey Dies & Emory Walsh, Female Yellow Labrador">
+                    <p>Melon (2M323)</p>
                     <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Raised by: Faith Bailey</h3>
-                        <h3>Female Black Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_olmstead.png"
-                        alt="Olmstead - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
-                    <p>Olmstead (5O322)</p>
-                    <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Raised by: Dana Matusewicz</h3>
-                        <h3>Male Yellow Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_paisley.png"
-                        alt="Paisley - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
-                    <p>Paisley (3P322)</p>
-                    <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
-                        <h3>Female Black Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_yoshiko.png"
-                        alt="Yoshiko - on hover, more details can be seen; (SP23 - Present), Raised by: Jenna Gaglioti, Female Yellow Labrador">
-                    <p>Yoshiko (5Y322)</p>
-                    <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Raised by: Nadia Despradel Canela</h3>
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Co-raised by: Casey Dies & Emory Walsh</h3>
                         <h3>Female Yellow Labrador</h3>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="dog-row">
 
             <div>
                 <div class="container">
-                    <img src="images/dogs_gino.png"
-                        alt="Gino - on hover, more details can be seen; (FA23 - Present), Raised by: Oscar Minaya, Male Black Labrador">
-                    <p>Gino (6GG23)</p>
-                    <div class="overlay">
-                        <h3>(FA23 - Present)</h3>
-                        <h3>Raised by: Oscar Minaya</h3>
-                        <h3>Male Black Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_keeper.jpg"
-                        alt="Keeper - on hover, more details can be seen; (SP24 - Present), Raised by: Rosie Hsu, Male Yellow Labrador">
-                    <p>Keeper (7KK23)</p>
+                    <img src="images/dogs_fianna.png"
+                        alt="Fianna - on hover, more details can be seen; (SP24 - Present), Raised by: Jenna Gaglioti, Female Black Labrador">
+                    <p>Fianna (3F322)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Co-raised by: Rosie Hsu</h3>
-                        <h3>Male Yellow Labrador</h3>
+                        <h3>Raised by: Jenna Gaglioti</h3>
+                        <h3>Female Black Labrador</h3>
                     </div>
                 </div>
             </div>
@@ -152,13 +98,13 @@
 
             <div>
                 <div class="container">
-                    <img src="images/dogs_fianna.png"
-                        alt="Fianna - on hover, more details can be seen; (SP24 - Present), Raised by: Jenna Gaglioti, Female Black Labrador">
-                    <p>Fianna (3F322)</p>
+                    <img src="images/dogs_keeper.jpg"
+                        alt="Keeper - on hover, more details can be seen; (SP24 - Present), Raised by: Rosie Hsu, Male Yellow Labrador">
+                    <p>Keeper (7KK23)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Raised by: Jenna Gaglioti</h3>
-                        <h3>Female Black Labrador</h3>
+                        <h3>Co-raised by: Rosie Hsu</h3>
+                        <h3>Male Yellow Labrador</h3>
                     </div>
                 </div>
             </div>
@@ -167,30 +113,72 @@
         <div class="dog-row">
             <div>
                 <div class="container">
-                    <img src="images/dogs_melon.jpeg"
-                        alt="Melon - on hover, more details can be seen; (SP24 - Present), Raised by: Casey Dies & Emory Walsh, Female Yellow Labrador">
-                    <p>Melon (2M323)</p>
+                    <img src="images/dogs_gino.png"
+                        alt="Gino - on hover, more details can be seen; (FA23 - Present), Raised by: Oscar Minaya, Male Black Labrador">
+                    <p>Gino (6GG23)</p>
                     <div class="overlay">
-                        <h3>(SP24 - Present)</h3>
-                        <h3>Co-raised by: Casey Dies & Emory Walsh</h3>
+                        <h3>(FA23 - Present)</h3>
+                        <h3>Raised by: Oscar Minaya</h3>
+                        <h3>Male Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_yoshiko.png"
+                        alt="Yoshiko - on hover, more details can be seen; (SP23 - Present), Raised by: Jenna Gaglioti, Female Yellow Labrador">
+                    <p>Yoshiko (5Y322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - Present)</h3>
+                        <h3>Raised by: Nadia Despradel Canela</h3>
                         <h3>Female Yellow Labrador</h3>
                     </div>
                 </div>
             </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_paisley.png"
+                        alt="Paisley - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
+                    <p>Paisley (3P322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - Present)</h3>
+                        <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
+                        <h3>Female Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_olmstead.png"
+                        alt="Olmstead - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
+                    <p>Olmstead (5O322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - Present)</h3>
+                        <h3>Raised by: Dana Matusewicz</h3>
+                        <h3>Male Yellow Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
 
         <!-- Past Dogs -->
         <h2 class="dog-heading">Past Dogs</h2>
         <div class="dog-row">
+
             <div>
                 <div class="container">
-                    <img src="images/dogs_oak.png"
-                        alt="Gino - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
-                    <p>Oak (2O22)</p>
+                    <img src="images/dogs_tina.png"
+                        alt="Tina - on hover, more details can be seen; (SP23 - Present), Raised by: Dana Matusewicz, Male Yellow Labrador">
+                    <p>Tina (1TT22)</p>
                     <div class="overlay">
-                        <h3>(FA22 - SP23)</h3>
-                        <h3>Co-raised by: Alyssa Roorda</h3>
-                        <h3>Being evaluated as a dual career stud/guide</h3>
+                        <h3>(SP23 - SP24)</h3>
+                        <h3>Raised by: Faith Bailey</h3>
+                        <h3>Breed evaluation</h3>
                     </div>
                 </div>
             </div>
@@ -207,6 +195,91 @@
                     </div>
                 </div>
             </div>
+
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_oak.png"
+                        alt="Gino - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
+                    <p>Oak (2O22)</p>
+                    <div class="overlay">
+                        <h3>(FA22 - SP23)</h3>
+                        <h3>Co-raised by: Alyssa Roorda</h3>
+                        <h3>Being evaluated as a dual career stud/guide</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_fern.png"
+                        alt="Fern - on hover, more details can be seen; (FA21 - FA22), Finished by: Dana Matusewicz, Adopted by family in NY">
+                    <p>Fern (ID: 3FF21)</p>
+                    <div class="overlay">
+                        <h3>(FA21 - FA22)</h3>
+                        <h3>Finished by: Dana Matusewicz</h3>
+                        <h3>Medically released</h3>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="dog-row">
+            <div>
+                <div class="container">
+                    <img src="images/dogs_alec.png"
+                        alt="Alec - on hover, more details can be seen; (FA21 - SP23), Raised by: Zoe Weissbach, Adopted back by Zoe">
+                    <p>Alec (ID: 7AA21)</p>
+                    <div class="overlay">
+                        <h3>(FA21 - SP23)</h3>
+                        <h3>Raised by: Zoe Weissbach</h3>
+                        <h3>Medically released and adopted back</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_truffle.png"
+                        alt="Truffle  - on hover, more details can be seen; (FA21 - SP23), Raised by: Raised by: Matt Roohan, Adopted back by Matt">
+                    <p>Truffle (ID: 3T21)</p>
+                    <div class="overlay">
+                        <h3>(FA21 - SP23)</h3>
+                        <h3>Raised by: Matt Roohan</h3>
+                        <h3>Adopted back</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_reagan.png"
+                        alt="Reagan - on hover, more details can be seen; (FA21 - FA22), Co-raised by: Heather Smith, Adopted by co-raiser">
+                    <p>Reagan (ID: 8R21)</p>
+                    <div class="overlay">
+                        <h3>(FA21 - FA22)</h3>
+                        <h3>Co-raised by: Heather Smith</h3>
+                        <h3>Medically released and adopted by co-raiser</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_faustina.png"
+                        alt="Faustina - on hover, more details can be seen; (FA20 - SP21), Raised by: Heather Smith, Adopted by Heather">
+                    <p>Faustina (ID: 4FF20)</p>
+                    <div class="overlay">
+                        <h3>FA20 - SP21</h3>
+                        <h3>Raised by: Heather Smith</h3>
+                        <h3>Adopted by Heather</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="dog-row">
 
             <div>
                 <div class="container">
@@ -233,75 +306,8 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="dog-row">
-            <div>
-                <div class="container">
-                    <img src="images/dogs_alec.png"
-                        alt="Alec - on hover, more details can be seen; (FA21 - SP23), Raised by: Zoe Weissbach, Adopted back by Zoe">
-                    <p>Alec (ID: 7AA21)</p>
-                    <div class="overlay">
-                        <h3>(FA21 - SP23)</h3>
-                        <h3>Raised by: Zoe Weissbach</h3>
-                        <h3>Adopted back by Zoe</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_truffle.png"
-                        alt="Truffle  - on hover, more details can be seen; (FA21 - SP23), Raised by: Raised by: Matt Roohan, Adopted back by Matt">
-                    <p>Truffle (ID: 3T21)</p>
-                    <div class="overlay">
-                        <h3>(FA21 - SP23)</h3>
-                        <h3>Raised by: Matt Roohan</h3>
-                        <h3>Adopted back by Matt</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_fern.png"
-                        alt="Fern - on hover, more details can be seen; (FA21 - FA22), Finished by: Dana Matusewicz, Adopted by family in NY">
-                    <p>Fern (ID: 3FF21)</p>
-                    <div class="overlay">
-                        <h3>(FA21 - FA22)</h3>
-                        <h3>Finished by: Dana Matusewicz</h3>
-                        <h3>Adopted by family in NY</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_reagan.png"
-                        alt="Reagan - on hover, more details can be seen; (FA21 - FA22), Co-raised by: Heather Smith, Adopted by co-raiser">
-                    <p>Reagan (ID: 8R21)</p>
-                    <div class="overlay">
-                        <h3>(FA21 - FA22)</h3>
-                        <h3>Co-raised by: Heather Smith</h3>
-                        <h3>Medically released</h3>
-                        <h3>Adopted by co-raiser</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_faustina.png"
-                        alt="Faustina - on hover, more details can be seen; (FA20 - SP21), Raised by: Heather Smith, Adopted by Heather">
-                    <p>Faustina (ID: 4FF20)</p>
-                    <div class="overlay">
-                        <h3>FA20 - SP21</h3>
-                        <h3>Raised by: Heather Smith</h3>
-                        <h3>Adopted by Heather</h3>
-                    </div>
-                </div>
-            </div>
+            <div></div>
+            <div></div>
         </div>
 
         <!-- Images Source: Client Provided, owned and shot by Guiding Eyes at Cornell -->
