--- a/dogs.html
+++ b/dogs.html
@@ -137,18 +137,7 @@
                 </div>
             </div>
 
-            <div>
-                <div class="container">
-                    <img src="images/dogs_paisley.png"
-                        alt="Paisley - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
-                    <p>Paisley (3P322)</p>
-                    <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
-                        <h3>Female Black Labrador</h3>
-                    </div>
-                </div>
-            </div>
+
 
             <div>
                 <div class="container">
@@ -163,12 +152,26 @@
                 </div>
             </div>
 
+            <div></div>
+
         </div>
 
 
         <!-- Past Dogs -->
         <h2 class="dog-heading">Past Dogs</h2>
         <div class="dog-row">
+            <div>
+                <div class="container">
+                    <img src="images/dogs_paisley.png"
+                        alt="Paisley - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
+                    <p>Paisley (3P322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - SP24)</h3>
+                        <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
+                        <h3>Breed evaluation</h3>
+                    </div>
+                </div>
+            </div>
 
             <div>
                 <div class="container">
@@ -205,10 +208,14 @@
                     <div class="overlay">
                         <h3>(FA22 - SP23)</h3>
                         <h3>Co-raised by: Alyssa Roorda</h3>
-                        <h3>Being evaluated as a dual career stud/guide</h3>
+                        <h3>Possible stud/in formal training</h3>
                     </div>
                 </div>
             </div>
+
+        </div>
+
+        <div class="dog-row">
 
             <div>
                 <div class="container">
@@ -223,9 +230,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <div class="dog-row">
             <div>
                 <div class="container">
                     <img src="images/dogs_alec.png"
@@ -265,6 +269,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="dog-row">
+
             <div>
                 <div class="container">
                     <img src="images/dogs_faustina.png"
@@ -277,9 +285,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="dog-row">
 
             <div>
                 <div class="container">
@@ -306,7 +311,6 @@
                     </div>
                 </div>
             </div>
-            <div></div>
             <div></div>
         </div>
 
