--- a/dogs.html
+++ b/dogs.html
@@ -59,6 +59,19 @@
 
             <div>
                 <div class="container">
+                    <img src="images/dogs_deirdre.jpg"
+                        alt="Deirdre - on hover, more details can be seen; (SP24 - Present), Raised by: Laura Bernert, Female Black Labrador">
+                    <p>Deirdre (6D423)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Co-raised by: Laura Bernert</h3>
+                        <h3>Female Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
                     <img src="images/dogs_melon.jpeg"
                         alt="Melon - on hover, more details can be seen; (SP24 - Present), Raised by: Casey Dies & Emory Walsh, Female Yellow Labrador">
                     <p>Melon (2M323)</p>
@@ -96,6 +109,10 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="dog-row">
+
             <div>
                 <div class="container">
                     <img src="images/dogs_keeper.jpg"
@@ -108,9 +125,7 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="dog-row">
             <div>
                 <div class="container">
                     <img src="images/dogs_gino.png"
@@ -138,20 +153,6 @@
             </div>
 
 
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_olmstead.png"
-                        alt="Olmstead - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
-                    <p>Olmstead (5O322)</p>
-                    <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Raised by: Dana Matusewicz</h3>
-                        <h3>Male Yellow Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
             <div></div>
 
         </div>
@@ -163,12 +164,25 @@
             <div>
                 <div class="container">
                     <img src="images/dogs_paisley.png"
-                        alt="Paisley - on hover, more details can be seen; (SP23 - Present), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
+                        alt="Paisley - on hover, more details can be seen; (SP23 - SP24), Co-raised by: Emory Walsh and Casey Dies, Female Black Labrador">
                     <p>Paisley (3P322)</p>
                     <div class="overlay">
                         <h3>(SP23 - SP24)</h3>
                         <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
-                        <h3>Breed evaluation</h3>
+                        <h3>Harness Training</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_olmstead.png"
+                        alt="Olmstead - on hover, more details can be seen; (SP23 - SP24), Raised by: Dana Matusewicz, Male Yellow Labrador">
+                    <p>Olmstead (5O322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - SP24)</h3>
+                        <h3>Raised by: Dana Matusewicz</h3>
+                        <h3>Harness Training</h3>
                     </div>
                 </div>
             </div>
@@ -181,34 +195,20 @@
                     <div class="overlay">
                         <h3>(SP23 - SP24)</h3>
                         <h3>Raised by: Faith Bailey</h3>
-                        <h3>Breed evaluation</h3>
+                        <h3>Breed Evaluation</h3>
                     </div>
                 </div>
             </div>
 
             <div>
                 <div class="container">
-                    <img src="images/dog_herb.png"
+                    <img src="images/dogs_herb.png"
                         alt="Herb - on hover, more details can be seen; (FA22 - Present), Raised by: Faith Bailey, Female Black Labrador">
                     <p>Herb (5HH22)</p>
                     <div class="overlay">
                         <h3>(FA22 - FA23)</h3>
                         <h3>Raised by: Jenna Gaglioti</h3>
-                        <h3>In formal training</h3>
-                    </div>
-                </div>
-            </div>
-
-
-            <div>
-                <div class="container">
-                    <img src="images/dogs_oak.png"
-                        alt="Gino - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
-                    <p>Oak (2O22)</p>
-                    <div class="overlay">
-                        <h3>(FA22 - SP23)</h3>
-                        <h3>Co-raised by: Alyssa Roorda</h3>
-                        <h3>Possible stud/in formal training</h3>
+                        <h3>Harness Training</h3>
                     </div>
                 </div>
             </div>
@@ -219,13 +219,26 @@
 
             <div>
                 <div class="container">
+                    <img src="images/dogs_oak.png"
+                        alt="Gino - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
+                    <p>Oak (2O22)</p>
+                    <div class="overlay">
+                        <h3>(FA22 - SP23)</h3>
+                        <h3>Co-raised by: Alyssa Roorda</h3>
+                        <h3>Possible Stud/Harness Training</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="container">
                     <img src="images/dogs_fern.png"
                         alt="Fern - on hover, more details can be seen; (FA21 - FA22), Finished by: Dana Matusewicz, Adopted by family in NY">
                     <p>Fern (ID: 3FF21)</p>
                     <div class="overlay">
                         <h3>(FA21 - FA22)</h3>
                         <h3>Finished by: Dana Matusewicz</h3>
-                        <h3>Medically released</h3>
+                        <h3>Medically Released</h3>
                     </div>
                 </div>
             </div>
@@ -238,7 +251,7 @@
                     <div class="overlay">
                         <h3>(FA21 - SP23)</h3>
                         <h3>Raised by: Zoe Weissbach</h3>
-                        <h3>Medically released and adopted back</h3>
+                        <h3>Medically Released and adopted back</h3>
                     </div>
                 </div>
             </div>
@@ -251,10 +264,14 @@
                     <div class="overlay">
                         <h3>(FA21 - SP23)</h3>
                         <h3>Raised by: Matt Roohan</h3>
-                        <h3>Adopted back</h3>
+                        <h3>Released</h3>
                     </div>
                 </div>
             </div>
+
+        </div>
+
+        <div class="dog-row">
 
             <div>
                 <div class="container">
@@ -264,14 +281,10 @@
                     <div class="overlay">
                         <h3>(FA21 - FA22)</h3>
                         <h3>Co-raised by: Heather Smith</h3>
-                        <h3>Medically released and adopted by co-raiser</h3>
+                        <h3>Medically Released and adopted by co-raiser</h3>
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="dog-row">
 
             <div>
                 <div class="container">
