--- a/events.html
+++ b/events.html
@@ -72,14 +72,14 @@
             </li> -->
 
             <li>
-                <h3>General Body Meeting 3</h3>
+                <h3>Paws and Pause with Cornell Yoga</h3>
 
-                <p>Join our sitters, raisers, and pups for a relaxing meeting. We'll be making dog toys! Come, chat, and
-                    make a tug toy for your dog or for one of our pups!</p>
+                <p>Join Melon for a yoga class with Cornell Yoga. Paid entrance.
+                </p>
 
-                <p><strong>Date and Time: </strong>Wednesday, April 10th, 5:00pm - 6:00pm</p>
+                <p><strong>Date and Time: </strong>Saturday, April 20th, 11:00am - 12:00pm</p>
 
-                <p><strong>Location: </strong>Malott 228</p>
+                <p><strong>Location: </strong>Willard Straight 519</p>
             </li>
 
             <li>
