--- a/events.html
+++ b/events.html
@@ -83,6 +83,28 @@
             </li>
 
             <li>
+                <h3>Class of 2025 Spring Fest</h3>
+
+                <p>Come visit our pups and meet our raisers/sitters!
+                </p>
+
+                <p><strong>Date and Time: </strong>Saturday, April 20th, 12:00pm - 2:00pm</p>
+
+                <p><strong>Location: </strong>Arts Quad</p>
+            </li>
+
+            <li>
+                <h3>Spring Fest</h3>
+
+                <p>Come visit our pups and meet our raisers/sitters!
+                </p>
+
+                <p><strong>Date and Time: </strong>Saturday, April 27th, 11:00am - 12:30pm</p>
+
+                <p><strong>Location: </strong>Arts Quad</p>
+            </li>
+
+            <li>
                 <h3>General Body Meeting 4</h3>
 
                 <p>Come and hear from Emma Vrabel, a junior at Harvard who was matched with GEB Holly about a year ago.
@@ -91,6 +113,17 @@
                 <p><strong>Date and Time: </strong>Wednesday, May 1st, 5:00pm - 6:00pm</p>
 
                 <p><strong>Location: </strong>Malott 228</p>
+            </li>
+
+            <li>
+                <h3>Pet a Puppy with SWE</h3>
+
+                <p>Destress for finals with the pups and the Society of Women Engineers.
+                </p>
+
+                <p><strong>Date and Time: </strong>Wednesday, May 10th, 3:00pm - 5:00pm</p>
+
+                <p><strong>Location: </strong>TBD</p>
             </li>
         </ul>
     </div>
