Update index.html to update contact person

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         </div>
     </div>
 
-    <p class="contact">To express interest or for more information, please contact Casey Dies, <a
-            aria-label="link to create email to president" href="mailto:ced243@cornell.edu">ced243@cornell.edu</a>
+    <p class="contact">To express interest or for more information, please contact Rosie Hsu, <a
+            aria-label="link to create email to president" href="mailto:rkh65@cornell.edu">rkh65@cornell.edu</a>
     <p>
 
         <!-- Images Source: Client Provided, owned and shot by Guiding Eyes at Cornell -->
