Update index.html for new eboard

--- a/index.html
+++ b/index.html
@@ -121,23 +121,23 @@
     <div class="eboard">
         <div class="eboardrow">
             <figure>
-                <img src="images/casey_dies.png" width="994" height="994">
-                <figcaption>President: Casey Dies (ced243)</figcaption>
+                <img src="images/rosie_hsu.png" width="994" height="994">
+                <figcaption>President: Rosie Hsu (rkh65)</figcaption>
             </figure>
 
             <figure>
-                <img src="images/emory_walsh.png" width="2214" height="2214">
-                <figcaption>Vice President: Emory Walsh (elw223)</figcaption>
+                <img src="images/kay_williams.png" width="2214" height="2214">
+                <figcaption>Co-Vice President: Kay Williams (ajw249)</figcaption>
             </figure>
 
             <figure>
-                <img src="images/hayley.png" width="2048" height="2048">
-                <figcaption>Treasurer: Hayley Algert (hja35)</figcaption>
+                <img src="images/rhiyan_gray.png" width="2214" height="2214">
+                <figcaption>Co-Vice President: Rhiyan Gray (rbg93)</figcaption>
             </figure>
 
             <figure>
-                <img src="images/jenna_gaglioti.png" width="525" height="525">
-                <figcaption>Secretary: Jenna Gaglioti (jrg352)</figcaption>
+                <img src="images/kiera_goff.png" width="2048" height="2048">
+                <figcaption>Secretary: Kiera Goff (krg73)</figcaption>
             </figure>
         </div>
 
@@ -148,18 +148,18 @@
             </figure>
 
             <figure>
-                <img src="images/jillian_creighton.jpg" width="530" height="530">
-                <figcaption>Marketing Chair: Jillian Creighton (jcc429)</figcaption>
+                <img src="images/ally_schwartz.jpg" width="530" height="530">
+                <figcaption>Marketing Chair: Ally Schwartz (als493)</figcaption>
             </figure>
 
             <figure>
-                <img src="images/amy_hinsley.png" width="2394" height="2394">
-                <figcaption>Social Chair: Amy Hinesley (ach236)</figcaption>
+                <img src="images/karlah_culver.png" width="525" height="525">
+                <figcaption>Treasurer: Karlah Culver (kbc46)</figcaption>
             </figure>
 
             <figure>
-                <img src="images/rachel_evanowski.jpeg" width="810" height="810">
-                <figcaption>Faculty Advisor: Rachel Evanowski (rle58)</figcaption>
+                <img src="images/sasha_theder.png" width="2394" height="2394">
+                <figcaption>Social Chair: Sasha Theder (set78)</figcaption>
             </figure>
         </div>
     </div>
