Update index.html to fix errors
Some images are jpg, need to be png

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </figure>
 
             <figure>
-                <img src="images/ally_schwartz.jpg" width="530" height="530">
+                <img src="images/ally_schwartz.png" width="530" height="530">
                 <figcaption>Marketing Chair: Ally Schwartz (als493)</figcaption>
             </figure>
 
